<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jossehblanco.tareaip.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:text="@string/txt1"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt1"
        android:ems="10"
        android:layout_margin="8dp"
        />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/edit1"
        android:layout_margin="8dp"
        android:layout_toRightOf="@id/edit1"
        android:text="@string/txt2"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/edit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:layout_alignBaseline="@id/edit1"
        android:layout_toRightOf="@id/txt2"
        android:layout_margin="8dp"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt1"
        android:layout_alignStart="@id/edit2"
        android:layout_margin="8dp"
        android:text="@string/txt3"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/txt1"
        android:layout_below="@id/edit1"
        android:layout_margin="8dp"
        android:text="@string/txt4"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_below="@id/txt4"
        android:focusable="false"
        android:enabled="false"
        android:cursorVisible="false"
        />

    <TextView
        android:id="@+id/txt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/txt1"
        android:layout_below="@id/edit3"
        android:layout_margin="8dp"
        android:text="@string/txt5"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_below="@id/txt5"
        android:focusable="false"
        android:enabled="false"
        android:cursorVisible="false"
        />

    <TextView
        android:id="@+id/txt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/txt1"
        android:layout_below="@id/edit4"
        android:layout_margin="8dp"
        android:text="@string/txt6"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/txt3"
        android:layout_below="@id/edit4"
        android:layout_margin="8dp"
        android:text="@string/txt7"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/edit5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_below="@id/txt6"
        android:ems="5"
        android:focusable="false"
        android:enabled="false"
        android:cursorVisible="false"

        />
    <EditText
        android:id="@+id/edit6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_below="@id/txt6"
        android:layout_toRightOf="@id/edit5"
        android:layout_alignStart="@id/edit2"
        android:ems="5"
        android:focusable="false"
        android:enabled="false"
        android:cursorVisible="false"
        />

    <TextView
        android:id="@+id/txt8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit5"
        android:layout_margin="8dp"
        android:text="@string/txt8"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/edit7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_below="@id/txt8"
        android:ems="5"
        android:focusable="false"
        android:enabled="false"
        android:cursorVisible="false"
        />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/edit6"
        android:layout_below="@id/edit6"
        android:layout_margin="8dp"
        android:onClick="onClick1"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit6"
        android:layout_margin="8dp"
        android:layout_toLeftOf="@id/btn1"
        android:onClick="onClick2"
        android:text="@string/btn2" />
</RelativeLayout>
